layout bugs fixed first edition

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ audio {
   }
 }
 
-@media only screen and (max-height: 730px) {
+@media only screen and (max-height: 734px) {
   .bodyClass {
     justify-content: initial !important;
     overflow: auto !important; 
